crates/hir-ty/tests/snapshots/jls_sealed__sealed_class_must_have_subclasses.snap
---
source: crates/hir-ty/tests/jls_sealed.rs
expression: out
---
FILE /src/com/example/Sealed.java:
package com.example;

sealed class Lone {
}

@2:13: sealed-class-must-have-subclasses: Sealed class must have subclasses
